# connector-python

./: .gitignore  .pylintrc  README.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish-to-test-pypi.yml  pylint.yml
examples/: __init__.py  util.py
examples/aggregate/: applicants-source.json
examples/detail/: employee-pay_level.json
examples/snapshot/: employee-info.json
examples/sql-like/aggregate/: employee-count.sql
examples/sql-like/detail/: employee-demo.sql
examples/sql-like/options/: sparse.json
visier/: __init__.py
visier/api/: __init__.py  base.py  direct_intake.py  dv_export.py  intake.py  model.py  query.py
visier/connector/: __init__.py  authentication.py  callback.py  constants.py  sessions.py  table.py
