[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "visier-connector"
authors = [
    {name = "Visier Research & Development", email = "info@visier.com"},
]
description = """Visier People Data connector"""
readme = "README.md"
requires-python = ">=3.8"
keywords = ["visier", "data", "query", "connector", "api"]
license = {file = "LICENSE"}
dynamic = ["version"]
dependencies = [
    "requests >= 2.31",
    "deprecated",
    "flask",
]

[tool.poetry]
readme = "README.md"

[tool.setuptools.dynamic]
version = {attr = "visier.__version__"}
